Remove Java 1.8 code